--- a/assets/global.css
+++ b/assets/global.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Helvetica, sans-serif;
-    color: #ddd;
+    color: #727273;
     padding-top: 150px;
     padding-bottom: 40px;
     overflow-x: hidden;
@@ -156,7 +156,7 @@ body {
 }
 
 .arrow_left, .arrow_right {
-    color: #ddd;
+    color: #727273;
 }
     
 .zoomed-container {
