--- a/assets/global.css
+++ b/assets/global.css
@@ -6,7 +6,7 @@
     
 body {
     width: 100%;
-    background: #ddd;
+    background:  white, #fc4022;
     display: flex;
     flex-direction: column;
     font-family: Helvetica, sans-serif;
