--- a/assets/global.css
+++ b/assets/global.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     font-family: Times, sans-serif;
     color: black;
-    padding-top: 150px;
+    padding-top: 140px;
     overflow-x: hidden;
     margin: 0;
 }
@@ -34,6 +34,7 @@ body {
     overflow-wrap: break-word;
     padding-left: 10px;
     padding-right: 14px;
+    padding-bottom: 10px;
     font-size: 0.8em;
     line-height: 0.9;
 }
@@ -118,7 +119,7 @@ body {
 .iframe-container iframe {
   width: 1200px; 
   height: 900px;
-  transform: scale(0.2);
+  transform: scale(0.1);
   transform-origin: 0 0;
   pointer-events: none;
   transition: filter 0.3s ease;
@@ -197,6 +198,7 @@ body {
     .info {
     padding-left: 20px;
     padding-right: 30px;
+    padding-bottom: 20px;
     font-size: 1em;
     }
     
@@ -212,14 +214,14 @@ body {
         max-width: 70vw;
         max-height: 70vw;
     }
-
-    .iframe-container iframe {
-    transform: scale(0.4);
-    }
     
     .scroll-box {
         width: 400px;
         height: auto;
+    }
+    
+    .iframe-container iframe {
+    transform: scale(0.2);
     }
 }
 
