--- a/assets/global.css
+++ b/assets/global.css
@@ -31,13 +31,9 @@ body {
 
 
  .info {
-    word-wrap: break-word;
-    overflow-wrap: break-word;
     padding-left: 10px;
     padding-right: 14px;
     padding-bottom: 10px;
-    font-size: 0.8em;
-    line-height: 0.9;
 }
 
 .info h2 {
@@ -52,6 +48,8 @@ body {
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1;
+    font-size: 0.8em;
+    line-height: 0.9;
 }
 
 .info a {
@@ -205,17 +203,20 @@ body {
     }
 
     .info {
-    opacity: 0;
     padding-left: 20px;
     padding-right: 30px;
     padding-bottom: 20px;
-    font-size: 1em;
     }
 
-    .info:hover {
-      opacity: 1;
-      pointer-events: auto;
-    }
+
+.combined-container .info {
+  opacity: 0;
+}
+
+.combined-container:hover .info {
+  opacity: 1;
+  pointer-events: auto;
+}
     
     .info a:hover {
     color: #ddd;
