global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -37,6 +37,68 @@ body {
     transform: translateY(0);
 }
 
+.name {
+    margin-bottom: 0;
+    font-weight: 400;
+    letter-spacing: -0.075em;
+    font-size: 1.8em;
+}
+
+.capital {
+    font-weight: 600;
+}
+
+#hover-image {
+  position: fixed;
+  width: 200px;
+  height: auto;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+  z-index: -1;
+}
+
+.contact-details {
+    text-align: center;
+}
+
+.contact-details a {
+    color: black;
+}
+
+.bio-container {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    max-width: 600px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
+
+.bio {
+    text-align: justify;
+    text-wrap: pretty
+    max-width: 600px;
+}
+
+.language-buttons {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.imprint-link {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.imprint-link a {
+    font-size: 20px;
+    color: black;
+}
+
+
 .info {
     word-wrap: break-word;
     overflow-wrap: break-word;
@@ -237,5 +299,9 @@ body {
     
     .iframe-container iframe {
     transform: scale(0.35);
+    }
+    
+        .name {
+        font-size: 2em;
     }
 }
