--- a/assets/global.css
+++ b/assets/global.css
@@ -214,6 +214,47 @@ main {
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
+
+label {
+    margin-top: 18px;
+    margin-bottom: 18px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+input, select {
+    width: 300px; 
+    padding: 12px;
+    background: #ff0000;
+    color:white;
+    font-size: 18px;
+    margin-top: 10px;
+    border: 2px solid #000000;
+    border-radius: 8px;
+    box-sizing: border-box; 
+}
+
+input:focus, select:focus {
+    border-color: black;
+    outline: none;
+}
+
+.whatsapp-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 230px;
+    margin-top: 30px;
+    background: #f8f8f8;
+    color: black;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 12px 20px;
+    border: 2px solid #d6d6d6;
+    border-radius: 12px;
+    cursor: pointer;
+    text-decoration: none;
+}
   
 
 @media (min-width: 768px) {
