--- a/assets/global.css
+++ b/assets/global.css
@@ -65,6 +65,11 @@ main {
     color: black;
 }
 
+.expand-section a {
+    text-decoration: underline;
+    color: black;
+}
+
 
 .info {
     word-wrap: break-word;
