--- a/assets/global.css
+++ b/assets/global.css
@@ -67,34 +67,13 @@ main {
     font-size: 1.6em;
     padding-left: 10px;
     display: inline-block;
-    user-select: none;
-    text-shadow: 
-    1px 1px 1px rgba(255, 255, 255, 0.3),  /* subtle light emboss */
-    0 1px 2px rgba(0, 0, 0, 0.15);         /* subtle drop shadow */
-}
-
-
-.expand-toggle::after {
-  content: attr(data-text); 
-  position: absolute;
-  left: 0;
-  top: 100%; /* directly below original */
-  width: 100%;
-  color: #222;
-  text-shadow: 
-    1px 1px 1px rgba(255, 255, 255, 0.3),
-    0 1px 2px rgba(0, 0, 0, 0.15);
-  transform: scaleY(-1);      /* flip vertically */
-  opacity: 0.2;               /* subtle fade */
-  pointer-events: none;       /* ignore mouse */
-  overflow: hidden;
+    user-select: none;      
 }
 
 .expand-section-toggle {
   all: unset;         
-  font-size: 1em;
-    letter-spacing: -0.03em;
-    font-weight: normal;
+    letter-spacing: -0.05em;
+    font-weight: 600;
   text-decoration: underline;
   cursor: pointer;
   display: inline-block;
@@ -108,7 +87,6 @@ main {
 
 .expand-section {
   max-height: 0;
-  overflow: hidden;
   transition: max-height 0.3s ease;
 }
 
@@ -164,7 +142,6 @@ main {
 
 .content, .expand-section {
   max-height: 0;
-  overflow: hidden;
   transition: max-height 0.4s ease;
 }
 
