--- a/assets/global.css
+++ b/assets/global.css
@@ -15,6 +15,16 @@ body {
     background: red;
 }
 
+.opener-text h1 {
+    font-size: 3em;
+    font-weight: 500;
+    letter-spacing: -0.03em;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    text-align: justify;
+    text-wrap: pretty
+}
+
 main {
     padding-left: 10px;
     padding-right: 10px;
