--- a/assets/global.css
+++ b/assets/global.css
@@ -64,7 +64,9 @@ main {
     all: unset;
     cursor: pointer;
     color: inherit;
-    font-size: 1.6em;
+    letter-spacing: -0.05em;
+    font-weight: 600;
+    text-decoration: underline;
     padding-left: 10px;
     display: inline-block;
     user-select: none;
