--- a/assets/global.css
+++ b/assets/global.css
@@ -16,9 +16,9 @@ body {
 }
 
 .opener-text h3 {
-    font-size: 2.4em;
+    font-size: 2.4rem;
     font-weight: 400;
-    letter-spacing: -0.05em;
+    letter-spacing: -0.05rem;
 }
 
 main {
