--- a/assets/global.css
+++ b/assets/global.css
@@ -17,7 +17,7 @@ body {
 .opener-text h3 {
     font-size: 2.4em;
     font-weight: 400;
-    letter-spacing: -0.05em;
+    letter-spacing: -0.1em;
 }
 
 main {
@@ -123,7 +123,7 @@ main {
 
 .info h2 {
     font-size: 1.4em;
-    font-weight: normal;
+    font-weight: 600;
     letter-spacing: -0.03em;
     line-height: 1;
     margin-top: 0;
