--- a/assets/global.css
+++ b/assets/global.css
@@ -14,19 +14,6 @@ body {
     margin: 0;
 }
 
-#page-wrapper {
-  transform: scaleY(0);
-  transform-origin: top;
-  opacity: 0;
-   min-height: 100vh;
-  transition: transform 0.6s ease, opacity 0.6s ease;
-}
-
-#page-wrapper.expanded {
-  transform: scaleY(1);
-  opacity: 1;
-}
-
 ::selection {
     color: yellow;
     background: red;
@@ -55,14 +42,6 @@ main {
     display: flex;
     flex-direction: column;
     gap: 10px;
-}
-
-.combined-container:nth-of-type(odd) {
-  transform: rotate(6deg);
-}
-
-.combined-container:nth-of-type(even) {
-  transform: rotate(-6deg);
 }
 
 .name a {
@@ -341,6 +320,10 @@ input:focus, select:focus {
   
 
 @media (min-width: 768px) {
+  html {
+  font-size: 18px;
+  }
+  
   body {
     padding-top: 200px;
     }
