--- a/assets/global.css
+++ b/assets/global.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 16px;
+  font-size: 14px;
   height: 100%;
 }
 
@@ -29,6 +29,7 @@ main {
     padding-left: 10px;
     padding-right: 10px;
     flex: 1;
+    min-height: 100vh
 }
 
 .projects-container {
@@ -321,7 +322,7 @@ input:focus, select:focus {
 
 @media (min-width: 768px) {
   html {
-  font-size: 18px;
+  font-size: 16px;
   }
   
   body {
