global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -19,7 +19,7 @@ body {
     background: red;
 }
 
-.opener-text h3 {
+.opener-text {
 font-size: 3.4rem;         
   font-weight: 400;
   letter-spacing: -0.08rem;
