--- a/assets/global.css
+++ b/assets/global.css
@@ -135,9 +135,10 @@ main {
 }
 
 .info h2 {
-    font-size: 1.2rem;
-    font-weight: 600;
+    font-size: 2.3rem;
+    font-weight: 400;
     letter-spacing: -0.03rem;
+    text-decoration: underline;
     line-height: 1;
     margin-top: 0;
 }
