global.css aktualisieren

--- a/assets/global.css
+++ b/assets/global.css
@@ -84,6 +84,7 @@ main {
 
 .expand-section-toggle {
   all: unset;
+  font-size: 1.2rem;
   letter-spacing: -0.05rem;
   font-weight: 600;
   text-decoration: underline;
@@ -114,6 +115,7 @@ main {
     text-decoration: none;
     display: inline-block;
     user-select: none;
+    padding-right: 10px;
 }
 
 .expand-toggle:hover {
@@ -220,7 +222,7 @@ main {
   height: 900px;
   transform: scale(0.35);
   transform-origin: 0 0;
-  pointer-events: none;
+  cursor: pointer;
   transition: filter 0.3s ease;
   border: none;
   position: absolute;
